races/apps/site/static/site.css
#map-canvas {
    height: 300px;
    width: 100%;
 }
 
.masthead {
    margin-top: 60px;
    height: 75px;
    position: relative;
    top: -20px;
    left: 0px;
    background-image: url(header75.jpg);
    background-repeat: repeat-x;
}

@media (max-width: 980px) {
    
    .masthead {
        margin-top: 0px;
    }
}

footer {
    border-top: 1px solid #999999;
    margin: 1em;
    color: #999999;
}
footer ul {
    float: right;
}
footer ul li {
    list-style: none;
}
footer a:link {
    color #999999;
}

#buttons {
    float: right;
}
#editbutton {
    float: right;
}
.fb-like {
    
}

